RavenDB-11697 Add client side validation for node tag

--- a/src/Raven.Studio/wwwroot/App/views/manage/addClusterNode.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/addClusterNode.html
@@ -22,7 +22,7 @@
                             <label for="tag" class="control-label">Tag</label>
                             <div class="flex-grow">
                                 <div data-bind="validationElement: nodeTag">
-                                    <input autocomplete="off" type="text" class="form-control" data-bind="textInput: nodeTag" id="tag" placeholder="Manually specify the node tag (optional)">
+                                    <input autocomplete="off" type="text" class="form-control" data-bind="textInput: nodeTag" id="tag" placeholder="Manually specify the node tag (optional)" maxlength="4">
                                 </div>
                             </div>
                         </div>
