--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -114,6 +114,9 @@
     }
 }
 
+.make-icon(client-configuration, "\e922");
+.make-icon(database-client-configuration, "\e922");
+.make-icon(studio-configuration, "\e9d4");
 .make-double-icon(new-database, "\e9fc", "\e937");
 .make-icon(experimental, "\ea14");
 .make-icon(flag, "\ea13");
@@ -160,8 +163,6 @@
 .make-icon(node-leader, "\e9d5");
 .make-icon(demote, "\e9d2");
 .make-icon(promote, "\e9d3");
-.make-icon(client-configuration, "\e9d4");
-.make-icon(database-client-configuration, "\e9d4");
 .make-icon(manage-connection-strings, "\e9d1");
 .make-icon(exit-fullscreen, "\e9d0");
 .make-icon(fullscreen, "\e997");
@@ -432,13 +433,14 @@
     .make-icon-color(manage-connection-strings, @color-1-1, @color-1-1);
     .make-icon-color(conflicts-resolution, @color-1-2, @color-1-2);
     .make-icon-color(database-client-configuration, @color-1-3, @color-1-3);
-    .make-icon-color(revisions, @color-2, @color-2);
-    .make-icon-color(document-expiration, @color-2-1, @color-2-1);
-    .make-icon-color(manage-dbgroup, @color-2-2, @color-2-2);
-    .make-icon-color(import-database, @color-2-3, @color-2-3);
-    .make-icon-color(export-database, @color-3, @color-3);
-    .make-icon-color(create-sample-data, @color-3-1, @color-3-1);
-    .make-icon-color(manage-ongoing-tasks, @color-3-2, @color-3-2);
+    .make-icon-color(studio-configuration, @color-2, @color-2);
+    .make-icon-color(revisions, @color-2-1, @color-2-1);
+    .make-icon-color(document-expiration, @color-2-2, @color-2-2);
+    .make-icon-color(manage-dbgroup, @color-2-3, @color-2-3);
+    .make-icon-color(import-database, @color-3, @color-3);
+    .make-icon-color(export-database, @color-3-1, @color-3-1);
+    .make-icon-color(create-sample-data, @color-3-2, @color-3-2);
+    .make-icon-color(manage-ongoing-tasks, @color-3-3, @color-3-3);
     //Stats section
     .make-icon-color(io-test, @color-2-1, @color-2-1);
     .make-icon-color(storage, @color-2-2, @color-2-2);
