RavenDB-11605 MongoDB migration tool

--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -1877,3 +1877,4 @@ ul.properties {
 @import "pages/cmp-xchg.less";
 @import "pages/eula.less";
 @import "pages/sql-migration.less";
+@import "pages/other-migration.less";
