--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -117,6 +117,7 @@
 .make-icon(client-configuration, "\e922");
 .make-icon(database-client-configuration, "\e922");
 .make-icon(studio-configuration, "\e9d4");
+.make-icon(database-studio-configuration, "\e9d4");
 .make-double-icon(new-database, "\e9fc", "\e937");
 .make-icon(experimental, "\ea14");
 .make-icon(flag, "\ea13");
@@ -433,7 +434,7 @@
     .make-icon-color(manage-connection-strings, @color-1-1, @color-1-1);
     .make-icon-color(conflicts-resolution, @color-1-2, @color-1-2);
     .make-icon-color(database-client-configuration, @color-1-3, @color-1-3);
-    .make-icon-color(studio-configuration, @color-2, @color-2);
+    .make-icon-color(database-studio-configuration, @color-2, @color-2);
     .make-icon-color(revisions, @color-2-1, @color-2-1);
     .make-icon-color(document-expiration, @color-2-2, @color-2-2);
     .make-icon-color(manage-dbgroup, @color-2-3, @color-2-3);
@@ -448,12 +449,13 @@
     //Manage server section
     .make-icon-color(cluster, @color-3-2, @color-3-2);
     .make-icon-color(client-configuration, @color-3-3, @color-3-3);
-    .make-icon-color(administrator-js-console, @color-4, @color-4);
-    .make-icon-color(certificate, @color-4-1, @color-4-1);
-    .make-icon-color(admin-logs, @color-4-2, @color-4-2);
-    .make-icon-color(traffic-watch, @color-4-3, @color-4-3);
-    .make-icon-color(gather-debug-information, @color-5, @color-5);
-    .make-icon-color(debug-advanced, @color-5-1, @color-5-1);
+    .make-icon-color(studio-configuration, @color-4, @color-4);
+    .make-icon-color(administrator-js-console, @color-4-1, @color-4-1);
+    .make-icon-color(certificate, @color-4-2, @color-4-2);
+    .make-icon-color(admin-logs, @color-4-3, @color-4-3);
+    .make-icon-color(traffic-watch, @color-5, @color-5);
+    .make-icon-color(gather-debug-information, @color-5-1, @color-5-1);
+    .make-icon-color(debug-advanced, @color-5-2, @color-5-2);
     //other
     .make-icon-color(system, #3c6fb4, #3c6fb4);
     .make-icon-color(plus, #b0d47d, #b0d47d);
