--- a/src/Raven.Studio/wwwroot/App/views/wizard/unsecured.html
+++ b/src/Raven.Studio/wwwroot/App/views/wizard/unsecured.html
@@ -57,6 +57,23 @@
                 <div class="help-block" data-bind="validationMessage: unsafeNetworkConfirm"></div>
             </div>
         </div>
+        
+        
+        <hr /> 
+        
+        <div class="form-group" data-bind="validationElement: $root.model.environment, with: $root.model">
+            <label for="port" class="control-label">Environment</label>
+            <div class="flex-grow">
+                <button class="btn btn-block dropdown-toggle" type="button" data-toggle="dropdown">
+                    <span data-bind="text: environment"></span>
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" data-bind="foreach: $root.constructor.environments">
+                    <li><a href="#" data-bind="text: $data, click: $parent.environment.bind($parent.environment, $data)"></a></li>
+                </ul>
+                <span class="help-block" data-bind="validationMessage: environment"></span>
+            </div>
+        </div>
     </div>
     <div class="navigation padding padding-lg flex-horizontal">
         <button type="button" class="btn btn-default btn-lg" data-bind="click: $root.back">
