--- a/src/Raven.Studio/wwwroot/App/views/manage/studioConfiguration.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/studioConfiguration.html
@@ -10,7 +10,7 @@
                                 <div>
                                     <label class="control-label">Environment</label>
                                 </div>
-                                <div class="flex-grow">
+                                <div style="position: relative">
                                     <button class="btn btn-block dropdown-toggle" type="button" data-toggle="dropdown">
                                         <span data-bind="text: model.environment"></span>
                                         <span class="caret"></span>
