RavenDB-11810 Add icon-os

--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -105,7 +105,7 @@
 }
 
 .make-icon-color (@name, @color-before, @color-after) {
-	.icon-@{name}::before {
+    .icon-@{name}::before {
         color: @color-before;
     }
 
@@ -114,6 +114,7 @@
     }
 }
 
+.make-icon(os, "\ea15");
 .make-icon(client-configuration, "\e922");
 .make-icon(database-client-configuration, "\e922");
 .make-icon(studio-configuration, "\e9d4");
