--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -114,6 +114,10 @@
     }
 }
 
+.make-icon(windows, "\e9fb");
+.make-icon(linux, "\e9fa");
+.make-icon(apple, "\e9f9");
+.make-icon(os, "\ea15");
 .make-icon(client-configuration, "\e922");
 .make-icon(database-client-configuration, "\e922");
 .make-icon(studio-configuration, "\e9d4");
