--- a/src/Raven.Studio/wwwroot/App/views/manage/trafficWatch.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/trafficWatch.html
@@ -41,14 +41,15 @@
     </div>
     <div class="flex-horizontal flex-noshrink">
         <div class="flex-separator"></div>
+        <div class="btn-group">
+            <button class="btn btn-sm btn-info btn-checkable" data-bind="click: toggleTail, css: { active: tailEnabled }">
+                <i class="icon-logs"></i> <span>Monitoring (tail -f)</span>
+            </button>
 
-        <button class="btn btn-sm btn-info btn-checkable" data-bind="click: toggleTail, css: { active: tailEnabled }">
-            <i class="icon-logs"></i> <span>Monitoring (tail -f)</span>
-        </button>
-
-        <button class="btn btn-sm btn-danger" data-bind="click: clear">
-            <i class="icon-cancel"></i><span>Clear</span>
-        </button>
+            <button class="btn btn-sm btn-danger" data-bind="click: clear">
+                <i class="icon-cancel"></i><span>Clear</span>
+            </button>
+        </div>
     </div>
 
     <div class="flex-grow">
