--- a/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
@@ -186,7 +186,7 @@
         width: 300px !important;
     }
 
-    .address, .cores, .memory, .serverVersion {
+    .address, .cores, .memory, .serverVersion, .os{
         margin-top: 0;
         line-height: 13px;
         margin-right: @grid-gutter-width/2;
